 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174: Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-3015: Rewrite of AvroStorage (jadler via cheolsoo)

PIG-3361: Improve Hadoop version detection logic for Pig unit test (daijy)

PIG-3280: Document IN operator and CASE expression (cheolsoo)

PIG-3342: Allow conditions in case statement (cheolsoo)

PIG-3327: Pig hits OOM when fetching task reports (rohini)

PIG-3336: Change IN operator to use or-expressions instead of EvalFunc (cheolsoo)

PIG-3339: Move pattern compilation in ToDate as a static variable (rohini)

PIG-3332: Upgrade Avro dependency to 1.7.4 (nielsbasjes via cheolsoo)

PIG-3307: Refactor physical operators to remove methods parameters that are always null (julien)

PIG-3317: disable optimizations via pig properties (traviscrawford via billgraham)

PIG-3321: AVRO: Support user specified schema on load (harveyc via rohini)

PIG-2959: Add a pig.cmd for Pig to run under Windows (daijy)

PIG-3311: add pig-withouthadoop-h2 to mvn-jar (julien)

PIG-2873: Converting bin/pig shell script to python (vikram.dixit via daijy)

PIG-3308: Storing data in hive columnar rc format (maczech via daijy)

PIG-3303: add hadoop h2 artifact to publications in ivy.xml (julien)

PIG-3169: Remove intermediate data after a job finishes (mwagner via cheolsoo)

PIG-3173: Partition filter push down does not happen when partition keys condition include a AND and OR construct (rohini)

PIG-2786: enhance Pig launcher script wrt. HBase/HCat integration (ndimiduk via daijy)

PIG-3198: Let users use any function from PigType -> PigType as if it were builtlin (jcoveney)

PIG-3268: Case statement support (cheolsoo)

PIG-3269: In operator support (cheolsoo)
